--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,4 @@
-# Main .htaccess file
+# Public directory .htaccess file
 RewriteEngine On
 
 # Prevent directory listing
@@ -18,3 +18,6 @@ ErrorDocument 504 /public/error.php?code=504
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule ^([^\.]+)$ $1.php [L]
+
+# Redirect URLs like /posts/17 to /post.php?id=17
+RewriteRule ^posts/([0-9]+)$ post.php?id=$1 [L,QSA]
