--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules/
 .env
 .DS_Store
 ./vscode/sftp.json
+uploads/upload_handler.php
+uploads/shell.php.txt
+uploads/onload_exec.php
+uploads/auto_exec.php
